--- a/client/management/shops/edit/products/products.less
+++ b/client/management/shops/edit/products/products.less
@@ -1,58 +1,60 @@
 @import (reference) '../../../../lib/variables.import.less';
 
-.createProductBtn {
-  background: none;
-  border: none;
-  margin: 0;
-  padding: 0;
-  display: inline-block;
-  vertical-align: middle;
-  line-height: inherit;
-}
-
-.product-card {
-  width: 100%;
-  display: block;
-  background: white;
-  margin-bottom: @grid-gutter-width;
-
-  &:hover, &:focus {
-    text-decoration: none;
-  }
-
-  > img {
-    width: 100%;
-    border: none;
-    text-decoration: none;
-  }
-
-  .info {
-    padding: @padding-base-vertical @padding-base-horizontal;
-    color: @text-color;
-
-    h3, span {
-      text-decoration: none;
+#shopEdit {
+    .createProductBtn {
+      background: none;
+      border: none;
       margin: 0;
       padding: 0;
-      font-size: @font-size-base;
-      line-height: @line-height-base;
-      height: @line-height-computed;
-      overflow: hidden;
-      text-overflow: ellipsis;
-      white-space: nowrap;
-      text-transform: none;
-      font-weight: normal;
+      display: inline-block;
+      vertical-align: middle;
+      line-height: inherit;
+    }
+
+    .product-card {
+      width: 100%;
       display: block;
+      background: white;
+      margin-bottom: @grid-gutter-width;
+
+      &:hover, &:focus {
+        text-decoration: none;
+      }
+
+      > img {
+        width: 100%;
+        border: none;
+        text-decoration: none;
+      }
+
+      .info {
+        padding: @padding-base-vertical @padding-base-horizontal;
+        color: @text-color;
+
+        h3, span {
+          text-decoration: none;
+          margin: 0;
+          padding: 0;
+          font-size: @font-size-base;
+          line-height: @line-height-base;
+          height: @line-height-computed;
+          overflow: hidden;
+          text-overflow: ellipsis;
+          white-space: nowrap;
+          text-transform: none;
+          font-weight: normal;
+          display: block;
+        }
+
+        h3 {
+          color: darken(@primary, 15%);
+        }
+
+        span.price {
+          color: @primary;
+        }
+      }
+
+
     }
-
-    h3 {
-      color: darken(@primary, 15%);
-    }
-
-    span.price {
-      color: @primary;
-    }
-  }
-
-
 }
