--- a/client/lib/bootstrap-material-design/less/variables.import.less
+++ b/client/lib/bootstrap-material-design/less/variables.import.less
@@ -22,10 +22,10 @@
 @lightgrey: #ECECEC;
 
 // Bootstrap shades
-@primary: #3DA3A7;
-@success: #0F9D58;
+@primary: #3AA3A3;
+@success: @lightgreen;
 @info: @lightblue;
-@warning: @deeporange;
+@warning: @orange;
 @danger: @red;
 
 // Typography elements for Material
