--- a/client/icons/camera.less
+++ b/client/icons/camera.less
@@ -3,7 +3,7 @@
 svg.icon-camera {
   polygon, circle {
     stroke-width: 2px;
-    stroke: @color-main;
+    stroke: @brand-primary;
     fill: none;
   }
 }
