--- a/client/icons/upload.less
+++ b/client/icons/upload.less
@@ -3,7 +3,7 @@
 svg.icon-upload {
   polyline, line {
     stroke-width: 2px;
-    stroke: @color-main;
+    stroke: @brand-primary;
     fill: none;
   }
 }
