--- a/client/imageEditor/imageEditor.less
+++ b/client/imageEditor/imageEditor.less
@@ -1,7 +1,7 @@
 @import (reference) '../lib/variables.import.less';
 
 .image-editor {
-  border: 1px solid @primary;
+  border: 1px solid @brand-primary;
   padding: 1px;
   width: 100%;
   position: relative;
@@ -50,7 +50,7 @@
       display: block;
 
       circle {
-        fill: @color-main;
+        fill: @brand-primary;
         -webkit-transform-origin: center;
         -moz-transform-origin: center;
         -o-transform-origin: center;
