--- a/client/layouts/toolbar/toolbar.less
+++ b/client/layouts/toolbar/toolbar.less
@@ -14,7 +14,7 @@
     }
 
   &.transparent {
-    background: fade(@primary, 0);
+    background: fade(@brand-primary, 0);
     .title {
       color: fadeout(white, 100%);
     }
