--- a/client/lib/bootstrap-material-design/less/checkboxes.import.less
+++ b/client/lib/bootstrap-material-design/less/checkboxes.import.less
@@ -128,7 +128,7 @@
         transform: rotate(-45deg);
     }
 
-    .variations(~" input[type=checkbox]:checked ~ .check:after", background-color, @success);
+    .variations(~" input[type=checkbox]:checked ~ .check:after", background-color, @brand-success);
     .variations(~" input[type=checkbox]:checked ~ .check:before", color, #4caf50);
     .variations(~" input[type=checkbox]:checked ~ .check", color, #4caf50);
 }
