--- a/client/lib/bootstrap-material-design/less/mixins.import.less
+++ b/client/lib/bootstrap-material-design/less/mixins.import.less
@@ -5,19 +5,19 @@
         @{property}: @default;
     }
     &-primary@{extra} {
-        @{property}: @primary;
+        @{property}: @brand-primary;
     }
     &-success@{extra} {
-        @{property}: @success;
+        @{property}: @brand-success;
     }
     &-info@{extra} {
-        @{property}: @info;
+        @{property}: @brand-info;
     }
     &-warning@{extra} {
-        @{property}: @warning;
+        @{property}: @brand-warning;
     }
     &-danger@{extra} {
-        @{property}: @danger;
+        @{property}: @brand-danger;
     }
     // Material shades
     &-material-red@{extra} {
