--- a/client/lib/bootstrap-material-design/less/navbar.import.less
+++ b/client/lib/bootstrap-material-design/less/navbar.import.less
@@ -158,7 +158,7 @@
         :-ms-input-placeholder { color: @navbar-border; };
     }
 
-    .variations(~"", background-color, @primary);
+    .variations(~"", background-color, @brand-primary);
     &-inverse {
         background-color: @navbar-inverse-bg;
     }
