--- a/client/lib/bootstrap-material-design/less/variables.import.less
+++ b/client/lib/bootstrap-material-design/less/variables.import.less
@@ -22,11 +22,11 @@
 @lightgrey: #ECECEC;
 
 // Bootstrap shades
-@primary: #3DA3A7;
-@success: #0F9D58;
-@info: @lightblue;
-@warning: @deeporange;
-@danger: @red;
+@brand-primary: #009587;
+@brand-success: #0F9D58;
+@brand-info: @lightblue;
+@brand-warning: @deeporange;
+@brand-danger: @red;
 
 // Typography elements for Material
 @darkbg-text: rgba(255,255,255,0.84);
@@ -38,43 +38,43 @@
 @btn-default: transparent;
 @btn-default-text: @lightbg-text;
 
-@btn-primary: @primary;
+@btn-primary: @brand-primary;
 @btn-primary-text: @darkbg-text;
 
-@btn-success: @success;
+@btn-success: @brand-success;
 @btn-success-text: @darkbg-text;
 
-@btn-info: @info;
+@btn-info: @brand-info;
 @btn-info-text: @darkbg-text;
 
-@btn-warning: @warning;
+@btn-warning: @brand-warning;
 @btn-warning-text: @darkbg-text;
 
-@btn-danger: @danger;
+@btn-danger: @brand-danger;
 @btn-danger-text: @darkbg-text;
 
 @input-unchecked: rgba(137, 137, 137, 0.3);
 @input-checked: rgba(15, 157, 88, 0.3);
 
 @radio-default: @lightbg-text;
-@radio-primary: @primary;
-@radio-success: @success;
-@radio-info:    @info;
-@radio-warning: @warning;
-@radio-danger:  @danger;
+@radio-primary: @brand-primary;
+@radio-success: @brand-success;
+@radio-info:    @brand-info;
+@radio-warning: @brand-warning;
+@radio-danger:  @brand-danger;
 
-@input-danger: @danger;
-@input-default: @primary;
-@input-warning: @warning;
-@input-success: @success;
-@input-info:    @info;
+@input-danger: @brand-danger;
+@input-default: @brand-primary;
+@input-warning: @brand-warning;
+@input-success: @brand-success;
+@input-info:    @brand-info;
 
-@navbar-danger-bg: @danger;
+@navbar-danger-bg: @brand-danger;
 @navbar-inverse-bg: #5264AE;
-@navbar-warning-bg: @warning;
-@navbar-success-bg: @success;
-@navbar-info-bg:    @info;
-@navbar-default-bg: @primary;
+@navbar-warning-bg: @brand-warning;
+@navbar-success-bg: @brand-success;
+@navbar-info-bg:    @brand-info;
+@navbar-default-bg: @brand-primary;
 @navbar-color: @darkbg-text;
 @navbar-link-color: @darkbg-text;
 @navbar-link-hover-color: @darkbg-text;
@@ -89,15 +89,15 @@
 @navbar-toggle-icon-bar-bg: @darkbg-text;
 @navbar-border: @darkbg-text;
 
-@alert-success: @success;
-@alert-info: @info;
-@alert-warning: @warning;
-@alert-danger: @danger;
+@alert-success: @brand-success;
+@alert-info: @brand-info;
+@alert-warning: @brand-warning;
+@alert-danger: @brand-danger;
 
-@progress-success: @success;
-@progress-info: @info;
-@progress-warning: @warning;
-@progress-danger: @danger;
+@progress-success: @brand-success;
+@progress-info: @brand-info;
+@progress-warning: @brand-warning;
+@progress-danger: @brand-danger;
 
 // Card
 @card-body-text: @lightbg-text;
