--- a/client/loading/loading.less
+++ b/client/loading/loading.less
@@ -14,7 +14,7 @@ section#loading {
       margin: -10px -35px;
 
       circle {
-        fill: @color-main;
+        fill: @brand-primary;
         -webkit-transform-origin: center;
         -moz-transform-origin: center;
         -o-transform-origin: center;
