--- a/client/management/products/edit/images/images.less
+++ b/client/management/products/edit/images/images.less
@@ -2,7 +2,7 @@
 
 .management-products-edit {
   .images {
-    background: @color-main;
+    background: @brand-primary;
     width: 100%;
     height: 200px;
     position: relative;
