--- a/client/marketplace/shops/view/details/details.less
+++ b/client/marketplace/shops/view/details/details.less
@@ -2,7 +2,7 @@
 
 .marketplace-shops-view {
   .details {
-    background: @color-main;
+    background: @brand-primary;
     color: white;
 
     h1 {
