--- a/client/marketplace/shops/view/images/images.less
+++ b/client/marketplace/shops/view/images/images.less
@@ -2,7 +2,7 @@
 
 .marketplace-shops-view {
   .images {
-    background: @color-main;
+    background: @brand-primary;
     width: 100%;
     position: relative;
     overflow: hidden;
