--- a/client/menu/menu.less
+++ b/client/menu/menu.less
@@ -7,7 +7,7 @@ nav#menu {
   top: 0;
   left: 0;
   width: 300px;
-  background: @primary;
+  background: @brand-primary;
   z-index: 100;
   overflow-x: hidden;
   overflow-y: auto;
@@ -20,7 +20,7 @@ nav#menu {
 
         &:hover,
         &:focus {
-          color: @primary;
+          color: @brand-primary;
           background-color: white;
         }
       }
