--- a/client/orders/view/items/items.less
+++ b/client/orders/view/items/items.less
@@ -7,13 +7,13 @@
       .clearfix();
       padding-bottom: @grid-gutter-width / 2;
       margin-bottom: @grid-gutter-width / 2;
-      border-bottom: 1px dotted @primary;
+      border-bottom: 1px dotted @brand-primary;
 
       > .image {
         height: 60px;
         width: 60px;
         background: transparent;
-        border: 1px solid @primary;
+        border: 1px solid @brand-primary;
         padding: 1px;
         float: left;
         margin-right: @grid-gutter-width / 2;
@@ -35,7 +35,7 @@
       }
 
       > .price {
-        color: @primary;
+        color: @brand-primary;
       }
 
       > .info {
@@ -51,7 +51,7 @@
         }
 
         .price {
-          color: @primary;
+          color: @brand-primary;
         }
       }
     }
@@ -62,7 +62,7 @@
 
       .price {
         float: right;
-        color: @primary;
+        color: @brand-primary;
       }
     }
   }
