--- a/client/icons/add.less
+++ b/client/icons/add.less
@@ -3,7 +3,7 @@
 svg.icon-add {
   circle, line {
     stroke-width: 2px;
-    stroke: @color-main;
+    stroke: @brand-primary;
     fill: none;
   }
 }
