--- a/client/icons/back.less
+++ b/client/icons/back.less
@@ -3,7 +3,7 @@
 svg.icon-back {
   polyline {
     stroke-width: 2px;
-    stroke: @color-main;
+    stroke: @brand-primary;
     fill: none;
   }
 }
