--- a/client/management/shops/edit/products/products.less
+++ b/client/management/shops/edit/products/products.less
@@ -47,11 +47,11 @@
         }
 
         h3 {
-          color: darken(@primary, 15%);
+          color: darken(@brand-primary, 15%);
         }
 
         span.price {
-          color: @primary;
+          color: @brand-primary;
         }
       }
 
