--- a/client/marketplace/products/view/details/details.less
+++ b/client/marketplace/products/view/details/details.less
@@ -3,7 +3,7 @@
 
 .marketplace-products-view {
   .details {
-    background: @color-main;
+    background: @brand-primary;
     color: white;
     padding: @grid-gutter-width/2;
 
@@ -17,7 +17,7 @@
       margin: @grid-gutter-width/2 0;
       padding-bottom: 5px;
       .clearfix();
-      border-bottom: 1px solid lighten(@primary, 15%);
+      border-bottom: 1px solid lighten(@brand-primary, 15%);
     }
 
     .description {
