--- a/client/lib/bootstrap-material-design/less/cards.import.less
+++ b/client/lib/bootstrap-material-design/less/cards.import.less
@@ -23,7 +23,7 @@
     color: @card-body-text;
     background: @card-body-background;
 
-    .shadow-z-2();
+    .shadow-z(2);
 
     .card-image {
         height: 60%;
