--- a/client/lib/bootstrap-material-design/less/material.import.less
+++ b/client/lib/bootstrap-material-design/less/material.import.less
@@ -1,125 +1,45 @@
+// Bootstrap
+@import "../../bootstrap/less/bootstrap.import.less";
+
+// Bootstrap mixins overrides
+@import "mixins/buttons.import.less";
+@import "mixins/alerts.import.less";
+@import "mixins/shadows.import.less";
+
+// Core variables and mixins
 @import "variables.import.less";
 @import "mixins.import.less";
+
+// Reset and dependencies
 @import "icons-material-design.import.less";
+
+// Core CSS
+@import "scaffolding.import.less";
+@import "type.import.less";
+@import "forms.import.less";
+@import "buttons.import.less";
 @import "shadows.import.less";
 
-body {
-  background-color: #EEEEEE;
-  &.inverse {
-    background: #333333;
-    &, .form-control {
-      color: @darkbg-text;
-    }
-  }
-}
-
-
-body, h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4 {
-  font-family: "RobotoDraft", "Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-weight: 300;
-}
-
-h5, h6{
-  font-weight: 400;
-}
-
-a, a:hover, a:focus {
-  color: @brand-primary;
-}
-
-// Well and Jumbotrons
-@import "welljumbo.import.less";
-
-// Buttons
-@import "buttons.import.less";
-
-// Checkboxes
-@import "checkboxes.import.less";
-
-// Toggle buttons
-@import "togglebutton.import.less";
-
-// Radios
-@import "radios.import.less";
-
-// Text inputs
-@import "inputs.import.less";
-
-legend {
-  border-bottom: 0;
-}
-
-// Lists
-@import "lists.import.less";
-
-// Navbar
-@import "navbar.import.less";
-
-.dropdown-menu {
-  border: 0;
-  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.26);
-  .divider {
-    background-color: rgba(229, 229, 229, 0.12);
-  }
-  li {
-    overflow: hidden;
-    position: relative;
-    a:hover {
-      background-color: transparent;
-      color: @brand-primary;
-    }
-  }
-  .variations(~" li a:hover", color, @brand-primary);
-}
-
-// Alerts
+// Components
+@import "dropdowns.import.less";
 @import "alerts.import.less";
-
-// Progress bar
-@import "progress.import.less";
-
-// Typography
-.text-warning {
-  color: @btn-warning;
-}
-.text-primary {
-  color: @btn-primary;
-}
-.text-danger {
-  color: @btn-danger;
-}
-.text-success {
-  color: @btn-success;
-}
-.text-info {
-  color: @btn-info;
-}
-
+@import "progress-bars.import.less";
+@import "welljumbo.import.less";
+@import "togglebutton.import.less";
+@import "checkboxes.import.less";
+@import "radios.import.less";
+@import "inputs.import.less";
+@import "lists.import.less";
+@import "navbar.import.less";
 @import "tabs.import.less";
-
 @import "popups.import.less";
-
 @import "icons.import.less";
-
 @import "cards.import.less";
-
 @import "dialogs.import.less";
-
 @import "labels.import.less";
-
 @import "panels.import.less";
 
-// Prevent highlight on mobile
-* {
-  -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
-  -webkit-tap-highlight-color: transparent;
-  &:focus {
-    outline: 0;
-  }
-}
-
-
-// External plugins
+// Plugins
 @import "plugin-snackbarjs.import.less";
 @import "plugin-nouislider.import.less";
 @import "plugin-selectize.import.less";
