--- a/client/lib/bootstrap-material-design/less/popups.import.less
+++ b/client/lib/bootstrap-material-design/less/popups.import.less
@@ -1,8 +1,7 @@
 .popover, .tooltip-inner {
-    background: #323232;
-    color: #FFF;
-    border-radius: 2px;
-
+  background: #323232;
+  color: #FFF;
+  border-radius: @border-radius-base;
 }
 
 .tooltip, .tooltip.in {
