--- a/client/lib/bootstrap-material-design/less/welljumbo.import.less
+++ b/client/lib/bootstrap-material-design/less/welljumbo.import.less
@@ -59,7 +59,7 @@ body, .container, .container-fluid {
     background-color: #fff;
     padding: 19px;
     margin-bottom: 20px;
-    .shadow-z-2();
+    .shadow-z(2);
     border-radius: 2px;
     border: 0;
     p {
