--- a/client/lib/bootstrap-material-design/less/buttons.import.less
+++ b/client/lib/bootstrap-material-design/less/buttons.import.less
@@ -1,78 +1,161 @@
+//
+// Buttons
+// --------------------------------------------------
+
+
+// Base styles
+// --------------------------------------------------
+
 .btn {
     position: relative;
-    padding: 8px 30px;
-    border: 0;
-    margin: 10px 1px;
-    cursor: pointer;
-    border-radius: 2px;
+    border: none;
     text-transform: uppercase;
-    text-decoration: none;
-    color: @darkbg-text;
+    .shadow-z(0);
 
-    &:hover:not(.btn-link):not(.btn-flat) {
-        .shadow-z-2-hover();
+    &:hover,
+    &:focus,
+    &.focus,
+    &:active,
+    &.active {
+        .shadow-z(2);
     }
-    &:active:not(.btn-link):not(.btn-flat) {
-        .shadow-z-3();
-    }
-    transition: box-shadow 0.28s cubic-bezier(0.4, 0, 0.2, 1);
+
+    transition:
+      background-color 0.28s cubic-bezier(0.4, 0, 0.2, 1),
+      color 0.28s cubic-bezier(0.4, 0, 0.2, 1);
+
     outline: none !important;
-
-    .variations(~":not(.btn-link):not(.btn-flat)", background-color, @btn-default);
-
-    .variations(~".btn-flat:not(.btn-link)", color, @lightbg-text);
-
-    &.btn-flat {
-        background: none;
-        box-shadow: none;
-        font-weight: 500;
-        &:disabled {
-            color: @text-disabled !important;
-        }
-    }
-
-    &.btn-raised {
-        .btn-shadow();
-    }
-
-    &.btn-fab {
-        margin: 0;
-        padding: 15px;
-        font-size: 26px;
-        width: 56px;
-        height: 56px;
-        &, &:hover {
-            .shadow-z-1();
-            .variations(~"", background-color, transparent);
-        }
-        &, .ripple-wrapper {
-            border-radius: 100%;
-        }
-        &.btn-fab-mini {
-            width: 40px;
-            height: 40px;
-            padding: 13px;
-            font-size: 15px;
-        }
-        i {
-            position: relative;
-            top: -5px;
-        }
-    }
 }
 
-// This is needed to style buttons which has not a variation suffix (they must be stiled as btn-default)
-.btn-link, .btn:not([class^="btn btn-"]), .btn-default {
-    color: @lightbg-text;
-    &:hover {
-        color: @lightbg-text;
-    }
+.btn-flat {
+  background: none;
+  font-weight: 500;
+
+  &:disabled {
+    color: @text-disabled !important;
+  }
 }
-.btn:not([class^="btn btn-"]), .btn-default, .btn-flat:not(.btn-link) {
-    &:hover, &.active {
-        background-color: rgba(255,255,255,0.5);
-    }
+
+.btn-flat,
+.btn-link {
+  .shadow-z(0);
+
+  &:hover,
+  &:focus,
+  &.focus,
+  &:active,
+  &.active {
+    .shadow-z(0);
+  }
 }
+
+.btn-fab {
+  margin: 0;
+  padding: 15px;
+  font-size: 26px;
+  width: 56px;
+  height: 56px;
+  &, &:hover {
+    .shadow-z(1);
+  }
+  &, .ripple-wrapper {
+    border-radius: 100%;
+  }
+  &.btn-fab-mini {
+    width: 40px;
+    height: 40px;
+    padding: 13px;
+    font-size: 15px;
+  }
+  i {
+    position: relative;
+    top: -5px;
+  }
+}
+
+.btn-raised {
+  .shadow-z(2);
+  &:hover,
+  &:focus,
+  &.focus,
+  &:active,
+  &.active {
+    .shadow-z(4);
+  }
+}
+
+.btn-material-red {
+  .button-variant(white; @red; @red);
+}
+
+.btn-material-pink {
+  .button-variant(white; @pink; @pink);
+}
+
+.btn-material-purple {
+  .button-variant(white; @purple; @purple);
+}
+
+.btn-material-deeppurple {
+  .button-variant(white; @deeppurple; @deeppurple);
+}
+
+.btn-material-indigo {
+  .button-variant(white; @indigo; @indigo);
+}
+
+.btn-material-blue {
+  .button-variant(white; @blue; @blue);
+}
+
+.btn-material-lightblue {
+  .button-variant(white; @lightblue; @lightblue);
+}
+
+.btn-material-cyan {
+  .button-variant(white; @cyan; @cyan);
+}
+
+.btn-material-teal {
+  .button-variant(white; @teal; @teal);
+}
+
+.btn-material-lightgreen {
+  .button-variant(white; @lightgreen; @lightgreen);
+}
+
+.btn-material-lime {
+  .button-variant(white; @lime; @lime);
+}
+
+.btn-material-lightyellow {
+  .button-variant(black; @lightyellow; @lightyellow);
+}
+
+.btn-material-orange {
+  .button-variant(white; @orange; @orange);
+}
+
+.btn-material-deeporange {
+  .button-variant(white; @deeporange; @deeporange);
+}
+
+.btn-material-grey {
+  .button-variant(white; @grey; @grey);
+}
+
+.btn-material-bluegrey {
+  .button-variant(white; @bluegrey; @bluegrey);
+}
+
+.btn-material-brown {
+  .button-variant(white; @brown; @brown);
+}
+
+.btn-material-lightgrey {
+  .button-variant(black; @lightgrey; @lightgrey);
+}
+
 .open > .dropdown-toggle.btn {
     .variations(~"", background-color, @btn-default);
 }
@@ -83,27 +166,70 @@
     position: relative;
     border-radius: 2px;
     margin: 10px 1px;
+    .shadow-z(0);
 
-    .btn-shadow();
+    &:hover,
+    &:focus,
+    &.focus,
+    &:active,
+    &.active {
+      .shadow-z(2);
+
+      .dropdown-menu {
+        .shadow-z(2);
+      }
+    }
+
     &.open .dropdown-toggle {
         box-shadow: none;
     }
+
     &.btn-group-raised {
-        .btn-shadow();
+      .shadow-z(2);
+
+      .dropdown-menu {
+        .shadow-z(2);
+      }
+
+      &:hover,
+      &:focus,
+      &.focus,
+      &:active,
+      &.active {
+        .shadow-z(4);
+
+        .dropdown-menu {
+          .shadow-z(4);
+        }
+      }
     }
-    .btn, .btn:active, .btn-group {
+
+    .btn {
+      &, &:active, &-group {
         box-shadow: none !important;
         margin: 0;
+      }
     }
-}
-.btn-group-flat {
-    box-shadow: none !important;
 }
 
-.btn-shadow() {
-    .shadow-z-2();
-    transition: box-shadow 0.28s cubic-bezier(0.4, 0, 0.2, 1);
-    &:active:not(.btn-link) {
-        .shadow-z-3();
-    }
+.btn-group {
+  .btn + .btn,
+  .btn + .btn-group,
+  .btn-group + .btn,
+  .btn-group + .btn-group {
+    margin: 0;
+  }
+}
+
+.btn-group-vertical {
+  > .btn + .btn,
+  > .btn + .btn-group,
+  > .btn-group + .btn,
+  > .btn-group + .btn-group {
+    margin: 0;
+  }
+}
+
+.btn-group-flat {
+    box-shadow: none !important;
 }
