--- a/client/lib/bootstrap-material-design/less/material.import.less
+++ b/client/lib/bootstrap-material-design/less/material.import.less
@@ -5,6 +5,7 @@
 @import "mixins/buttons.import.less";
 @import "mixins/alerts.import.less";
 @import "mixins/shadows.import.less";
+@import "mixins/navbars.import.less";
 
 // Core variables and mixins
 @import "variables.import.less";
