--- a/client/lib/bootstrap-material-design/less/variables.import.less
+++ b/client/lib/bootstrap-material-design/less/variables.import.less
@@ -22,7 +22,7 @@
 @lightgrey:   #ECECEC;
 
 // Bootstrap shades
-@brand-primary: #009587;
+@brand-primary: #3AA3A3;
 @brand-success: #0F9D58;
 @brand-info:    @lightblue;
 @brand-warning: @deeporange;
@@ -78,11 +78,10 @@
 @input-info:    @brand-info;
 
 @navbar-danger-bg: @brand-danger;
-@navbar-inverse-bg: #5264AE;
 @navbar-warning-bg: @brand-warning;
 @navbar-success-bg: @brand-success;
 @navbar-info-bg:    @brand-info;
-@navbar-default-bg: @brand-primary;
+@navbar-default-bg: white;
 @navbar-color: @darkbg-text;
 @navbar-link-color: @darkbg-text;
 @navbar-link-hover-color: @darkbg-text;
@@ -167,3 +166,6 @@
 @alert-info-bg:               @brand-info;
 @alert-warning-bg:            @brand-warning;
 @alert-danger-bg:             @brand-danger;
+
+
+@navbar-height: 48px;
