--- a/client/lib/bootstrap-material-design/less/navbar.import.less
+++ b/client/lib/bootstrap-material-design/less/navbar.import.less
@@ -1,227 +1,240 @@
 .navbar {
-    background-color: @navbar-default-bg;
-    border: 0;
+  border: none;
+
+  .navbar-brand {
+    position: relative;
+  }
+
+  .navbar-toggle {
+    border: none;
+    background: transparent;
+    height: @navbar-height;
+    width: @navbar-height;
+    margin: 0 0 0 5px;
+    padding: @navbar-height / 4;
+    font-size: @navbar-height / 2;
+    line-height: 1;
     border-radius: 0;
 
-    .navbar-brand {
-        position: relative;
-        height: 60px;
-        line-height: 30px;
-        color: @navbar-brand-color;
-        &:hover,
-        &:focus {
-            color: @navbar-brand-color;
-            background-color: transparent;
-        }
+    &:hover,
+    &:focus {
+      background-color: transparent;
     }
 
-    .navbar-text {
-        color: @navbar-color;
-        margin-top: 20px;
-        margin-bottom: 20px;
+    .navbar-toggle-icon {
+      transition: transform 0.28s cubic-bezier(0.4, 0, 0.2, 1);
+      transform: rotate(0deg);
+      transform-origin: center center 0;
     }
 
-    .navbar-nav {
-        > li > a {
-            color: @navbar-link-color;
-            padding-top: 20px;
-            padding-bottom: 20px;
+    &.collapsed {
+      .navbar-toggle-icon {
+        transform: rotate(180deg);
+      }
+    }
+  }
 
-            &:hover,
-            &:focus {
-                color: @navbar-link-hover-color;
-                background-color: @navbar-link-hover-bg;
-            }
-        }
-        > .active > a {
-            &,
-            &:hover,
-            &:focus {
-                color: @navbar-link-active-color;
-                background-color: @navbar-link-active-bg;
-            }
-        }
-        > .disabled > a {
-            &,
-            &:hover,
-            &:focus {
-                color: @navbar-link-disabled-color;
-                background-color: @navbar-link-disabled-bg;
-            }
-        }
+  .navbar-header {
+    .btn.navbar-btn {
+      height: @navbar-height;
+      line-height: @navbar-height - @padding-base-vertical * 2;
+      padding: @padding-base-vertical @navbar-height / 2;
+      margin-top: 0;
+      margin-bottom: 0;
+      border-radius: 0;
+      .shadow-z(0);
+
+      &:hover,
+      &:focus,
+      &.focus,
+      &:active,
+      &.active {
+        .shadow-z(0);
+      }
+
+      *[class^="mdi-"] {
+        font-size: @navbar-height / 2;
+        line-height: @navbar-height - @padding-base-vertical * 2;
+        margin: 0 -(@navbar-height / 4);
+      }
     }
 
-    // Darken the responsive nav toggle
-    .navbar-toggle {
-        border-color: transparent;
-        &:hover,
-        &:focus {
-            background-color: @navbar-toggle-hover-bg;
-        }
-        .icon-bar {
-            background-color: @navbar-toggle-icon-bar-bg;
-        }
+    .navbar-btn {
+      float: left !important;
     }
+  }
 
-    .navbar-default .navbar-toggle,
-    .navbar-inverse .navbar-toggle {
-        border-color: transparent;
+  .navbar-collapse {
+    @media (min-width: @grid-float-breakpoint) {
+      .btn.navbar-btn {
+        .navbar .navbar-header .btn.navbar-btn();
+      }
+      .navbar-form {
+        .btn.navbar-btn {
+          margin-top: -12px;
+          margin-bottom: -12px;
+        }
+      }
     }
+  }
 
-    .navbar-collapse,
-    .navbar-form {
-        border-color: rgba(0,0,0,0.1);
+  .navbar-form {
+    @media (min-width: @grid-float-breakpoint) {
+      margin: (@navbar-height - 28px) / 2 0;
+      height: 28px;
     }
+  }
 
-    // Dropdowns
-    .navbar-nav {
-        > .open > a {
-            &,
-            &:hover,
-            &:focus {
-                background-color: @navbar-link-active-bg;
-                color: @navbar-link-active-color;
-            }
-        }
+  .navbar-toolbar {
+    .navbar-header();
+    .btn-toolbar();
+    float: right !important;
 
-        @media (max-width: 767px) {
-            // Dropdowns get custom display
-            .open .dropdown-menu {
-                > .dropdown-header {
-                    border: 0;
-                    color: darken(@navbar-link-color, 17%)
-                }
-                .divider {
-                    background-color: @navbar-border;
-                }
-                > li > a {
-                    color: @navbar-link-color;
-                    &:hover,
-                    &:focus {
-                        color: @navbar-link-hover-color;
-                        background-color: @navbar-link-hover-bg;
-                    }
-                }
-                > .active > a {
-                    &,
-                    &:hover,
-                    &:focus {
-                        color: @navbar-link-active-color;
-                        background-color: @navbar-link-active-bg;
-                    }
-                }
-                > .disabled > a {
-                    &,
-                    &:hover,
-                    &:focus {
-                        color: @navbar-link-disabled-color;
-                        background-color: @navbar-link-disabled-bg;
-                    }
-                }
-            }
+    > .btn-group {
+      border-radius: 0;
+      margin: 0 0 0 5px;
+
+      .shadow-z(0);
+
+      &:hover,
+      &:focus,
+      &.focus,
+      &:active,
+      &.active {
+        .shadow-z(0);
+      }
+
+      &:last-child {
+        .btn:last-child {
+          .border-right-radius(@navbar-border-radius);
         }
+      }
     }
+  }
 
-    .navbar-link {
-        color: @navbar-link-color;
-        &:hover {
-            color: @navbar-link-hover-color;
-        }
+
+  > .container,
+  > .container-fluid {
+    @media (max-width: @grid-float-breakpoint-max) {
+      .navbar-header {
+        margin-left: -(@grid-gutter-width / 2);
+        margin-right: 0;
+      }
+      .navbar-toolbar {
+        margin-right: -(@grid-gutter-width / 2);
+        margin-left: 0;
+      }
     }
-
-    .btn-link {
-        color: @navbar-link-color;
-        &:hover,
-        &:focus {
-            color: @navbar-link-hover-color;
-        }
-        &[disabled],
-        fieldset[disabled] & {
-            &:hover,
-            &:focus {
-                color: @navbar-link-disabled-color;
-            }
-        }
+    @media (min-width: @grid-float-breakpoint) {
+      .navbar-brand {
+        margin-left: 0;
+      }
+      .navbar-header {
+        margin-left: -(@grid-gutter-width / 2);
+      }
+      .navbar-toolbar {
+        margin-right: -(@grid-gutter-width / 2);
+      }
     }
+  }
+}
 
-    .navbar-form {
-        margin-top: 16px;
-        .form-control-wrapper .form-control, .form-control {
-            border-color: @navbar-border;
-            color: @navbar-border;
-        }
-        .form-control-wrapper {
-            .material-input:before, input:focus ~ .material-input:after {
-                background-color: @navbar-border;
-            }
-        }
-        ::-webkit-input-placeholder { color: @navbar-border; }
-        :-moz-placeholder { color: @navbar-border; };
-        ::-moz-placeholder { color: @navbar-border; };
-        :-ms-input-placeholder { color: @navbar-border; };
-    }
+.navbar-default {
+  .navbar-material-variant(@navbar-default-bg);
+}
 
-    .variations(~"", background-color, @brand-primary);
-    &-inverse {
-        background-color: @navbar-inverse-bg;
-    }
-    &-material-white {
-        background-color: #FFF;
-        .navbar-brand, .navbar-brand:hover, .navbar-brand:focus {
-            color: @lightbg-text;
-        }
-        .navbar-nav {
-            & > li > a {
-                color: @lightbg-text;
+.navbar-inverse {
+  .navbar-material-variant(@navbar-inverse-bg);
+}
 
-                &:hover,
-                &:focus {
-                    color: @lightbg-text;
-                    background-color: @navbar-link-hover-bg;
-                }
-            }
-            & > .active > a {
-                &,
-                &:hover,
-                &:focus {
-                    color: @lightbg-text;
-                    background-color: @navbar-link-active-bg;
-                }
-            }
-            & > .disabled > a {
-                &,
-                &:hover,
-                &:focus {
-                    color: @lightbg-text;
-                    background-color: @navbar-link-disabled-bg;
-                }
-            }
+.navbar-primary {
+  .navbar-material-variant(@brand-primary);
+}
 
-            & > .open > a {
-                &,
-                &:hover,
-                &:focus {
-                    background-color: @navbar-link-active-bg;
-                    color: @lightbg-text;
-                }
-            }
+.navbar-success {
+  .navbar-material-variant(@brand-success);
+}
 
-        }
-    }
+.navbar-info {
+  .navbar-material-variant(@brand-info);
+}
 
-    @media (max-width: 1199px) {
+.navbar-warning {
+  .navbar-material-variant(@brand-warning);
+}
 
-        .navbar-brand {
-            height: 50px;
-            padding: 10px 15px;
-        }
-        .navbar-form {
-            margin-top: 10px;
-        }
+.navbar-danger {
+  .navbar-material-variant(@brand-danger);
+}
 
-        .navbar-nav > li > a {
-            padding-top: 15px;
-            padding-bottom: 15px;
-        }
-    }
+.navbar-material-red {
+  .navbar-material-variant(@red);
+}
+
+.navbar-material-pink {
+  .navbar-material-variant(@pink);
+}
+
+.navbar-material-purple {
+  .navbar-material-variant(@purple);
+}
+
+.navbar-material-deeppurple {
+  .navbar-material-variant(@deeppurple);
+}
+
+.navbar-material-indigo {
+  .navbar-material-variant(@indigo);
+}
+
+.navbar-material-blue {
+  .navbar-material-variant(@blue);
+}
+
+.navbar-material-lightblue {
+  .navbar-material-variant(@lightblue);
+}
+
+.navbar-material-cyan {
+  .navbar-material-variant(@cyan);
+}
+
+.navbar-material-teal {
+  .navbar-material-variant(@teal);
+}
+
+.navbar-material-lightgreen {
+  .navbar-material-variant(@lightgreen);
+}
+
+.navbar-material-lime {
+  .navbar-material-variant(@lime);
+}
+
+.navbar-material-lightyellow {
+  .navbar-material-variant(@lightyellow);
+}
+
+.navbar-material-orange {
+  .navbar-material-variant(@orange);
+}
+
+.navbar-material-deeporange {
+  .navbar-material-variant(@deeporange);
+}
+
+.navbar-material-grey {
+  .navbar-material-variant(@grey);
+}
+
+.navbar-material-bluegrey {
+  .navbar-material-variant(@bluegrey);
+}
+
+.navbar-material-brown {
+  .navbar-material-variant(@brown);
+}
+
+.navbar-material-lightgrey {
+  .navbar-material-variant(@lightgrey);
 }
