--- a/client/layouts/menu/menu.html
+++ b/client/layouts/menu/menu.html
@@ -2,131 +2,127 @@
     <div id="mainMenu">
         <div class="overlay"></div>
         <div class="menu">
-            <div class="header">
-                <button class="closeBtn btn btn-icon">
-                    {{> iconCancel}}
-                </button>
-                {{> iconLogo}}
-                <h1 class="brand">
-                    Merchist
-                </h1>
-            </div>
-            <div class="menus">
-                <div class="divider">
-                    <h6>
-                        {{_ "menu.mainLinks.header"}}
-                    </h6>
-                </div>
-                <ul class="nav nav-pills nav-stacked">
-                    <li>
-                        <a href="{{pathFor route='marketplace'}}">
-                            {{_ "menu.mainLinks.marketplace.text"}}
-                        </a>
-                    </li>
-                    {{ #if ordersCount }}
-                    <li>
-                        <a href="{{pathFor route='orders'}}">
-                            {{_ "menu.mainLinks.orders.text"}}
-                            <span class="badge pull-right">{{ ordersCount}}</span>
-                        </a>
-                    </li>
-                    {{ /if }}
-                    {{ #if currentUser }}
-                    <li>
-                        <a href="{{pathFor route='profile'}}">
-                            {{_ "menu.mainLinks.profile.text"}}
-                        </a>
-                    </li>
-                    {{ /if }}
-                </ul>
-                <div class="divider">
-                    <h6>
-                        {{_ "menu.management.header"}}
-                    </h6>
-                </div>
-                <ul class="nav nav-pills nav-stacked">
-                    {{ #each shops }}
-                    <li>
-                        <a href="{{pathFor route='shops.edit' data=this }}" class="shop">
-                            <div class="logo">
-                                <img src="{{ abs logo.url }}">
+        <div class="panel panel-primary">
+            <div class="panel-heading">
+                {{ #if currentUser }}
+                    <div class="profile">
+                        {{ #with currentUser}}
+                        <div class="avatar">
+                            <img src="{{avatar}}">
+                        </div>
+                        <div class="info">
+                            <div class="name">
+                                {{ profile.firstName }}
+                                {{ profile.lastName }}
                             </div>
-                            {{#if title}}
-                                {{ title }}
-                            {{else}}
-                                <i>
-                                    {{_ "menu.management.shop.title.none"}}
-                                </i>
-                            {{/if}}
-                        </a>
-                    </li>
-                    {{ /each }}
-                    <li>
-                        <a href="#" class="createShopBtn">
-                            {{> iconAdd}}
-                            {{_ "menu.management.createShopBtn.text"}}
-                        </a>
-                    </li>
-                </ul>
-                {{ #if currentUser.profile.isAdmin }}
-                <div class="divider">
-                    <h6>
-                        Admin
-                    </h6>
-                </div>
-                <ul class="nav nav-pills nav-stacked">
-                    <li>
-                        <a href="{{pathFor route='admin.users'}}">
-                            Users
-                        </a>
-                    </li>
-                </ul>
+                            <div class="actions">
+                                <button class="btn btn-inverted btn-xs logoutBtn">
+                                    {{_ "menu.profile.logoutBtn.text"}}
+                                </button>
+                            </div>
+                        </div>
+                        {{ /with }}
+                    </div>
+                {{ else }}
+                    <div class="auth">
+                        <button class="btn btn-inverted btn-lg btn-block authBtn">
+                            {{_ "menu.auth.authBtn.text"}}
+                        </button>
+                    </div>
                 {{ /if }}
-                <div class="divider">
-                    <h6>
-                        {{_ "menu.infoLinks.header"}}
-                    </h6>
+            </div>
+            <div class="panel-body">
+                <div class="menus">
+                    <div class="divider">
+                        <h6>
+                            {{_ "menu.mainLinks.header"}}
+                        </h6>
+                    </div>
+                    <ul class="nav nav-pills nav-stacked">
+                        <li>
+                            <a href="{{pathFor route='marketplace'}}">
+                                {{_ "menu.mainLinks.marketplace.text"}}
+                            </a>
+                        </li>
+                        {{ #if ordersCount }}
+                        <li>
+                            <a href="{{pathFor route='orders'}}">
+                                {{_ "menu.mainLinks.orders.text"}}
+                                <span class="badge pull-right">{{ ordersCount}}</span>
+                            </a>
+                        </li>
+                        {{ /if }}
+                        {{ #if currentUser }}
+                        <li>
+                            <a href="{{pathFor route='profile'}}">
+                                {{_ "menu.mainLinks.profile.text"}}
+                            </a>
+                        </li>
+                        {{ /if }}
+                    </ul>
+                    <div class="divider">
+                        <h6>
+                            {{_ "menu.management.header"}}
+                        </h6>
+                    </div>
+                    <ul class="nav nav-pills nav-stacked">
+                        {{ #each shops }}
+                        <li>
+                            <a href="{{pathFor route='shops.edit' data=this }}" class="shop">
+                                <div class="logo">
+                                    <img src="{{ abs logo.url }}">
+                                </div>
+                                {{#if title}}
+                                    {{ title }}
+                                {{else}}
+                                    <i>
+                                        {{_ "menu.management.shop.title.none"}}
+                                    </i>
+                                {{/if}}
+                            </a>
+                        </li>
+                        {{ /each }}
+                        <li>
+                            <a href="#" class="createShopBtn">
+                                {{> iconAdd}}
+                                {{_ "menu.management.createShopBtn.text"}}
+                            </a>
+                        </li>
+                    </ul>
+                    {{ #if currentUser.profile.isAdmin }}
+                    <div class="divider">
+                        <h6>
+                            Admin
+                        </h6>
+                    </div>
+                    <ul class="nav nav-pills nav-stacked">
+                        <li>
+                            <a href="{{pathFor route='admin.users'}}">
+                                Users
+                            </a>
+                        </li>
+                    </ul>
+                    {{ /if }}
+                    <div class="divider">
+                        <h6>
+                            {{_ "menu.infoLinks.header"}}
+                        </h6>
+                    </div>
+                    <ul class="nav nav-pills nav-stacked">
+                        <li>
+                            <a href="{{pathFor route='policy'}}">
+                                {{_ "menu.infoLinks.policy.text"}}
+                            </a>
+                        </li>
+                        <li>
+                            <a href="{{pathFor route='terms'}}">
+                                {{_ "menu.infoLinks.terms.text"}}
+                            </a>
+                        </li>
+                    </ul>
                 </div>
-                <ul class="nav nav-pills nav-stacked">
-                    <li>
-                        <a href="{{pathFor route='policy'}}">
-                            {{_ "menu.infoLinks.policy.text"}}
-                        </a>
-                    </li>
-                    <li>
-                        <a href="{{pathFor route='terms'}}">
-                            {{_ "menu.infoLinks.terms.text"}}
-                        </a>
-                    </li>
-                </ul>
             </div>
-
-            {{ #if currentUser }}
-            <div class="profile">
-                {{ #with currentUser}}
-                    <div class="avatar">
-                        <img src="{{avatar}}">
-                    </div>
-                    <div class="info">
-                        <div class="name">
-                            {{ profile.firstName }}
-                            {{ profile.lastName }}
-                        </div>
-                        <div class="actions">
-                            <button class="btn btn-inverted btn-xs logoutBtn">
-                                {{_ "menu.profile.logoutBtn.text"}}
-                            </button>
-                        </div>
-                    </div>
-                {{ /with }}
-            </div>
-            {{ else }}
-            <div class="auth">
-                <button class="btn btn-inverted btn-lg btn-block authBtn">
-                    {{_ "menu.auth.authBtn.text"}}
-                </button>
-            </div>
-            {{ /if }}
+        </div>
         </div>
     </div>
 </template>
