--- a/client/layouts/menu/menu.less
+++ b/client/layouts/menu/menu.less
@@ -9,7 +9,7 @@
   bottom: 0;
   left: 0;
   right: 0;
-  z-index: 1000;
+  z-index: @zindex-navbar-fixed + 1;
   display: none;
 
   .overlay,.menu {
@@ -23,54 +23,20 @@
   }
 
   .menu {
-    width: 100%;
+    width: 75%;
     max-width: @main-menu-width;
-    background: @body-bg;
+    min-width: 200px;
+    overflow-x: hidden;
+    overflow-y: auto;
 
-    .header {
-      height: 48px;
+    .panel {
+      width: 100%;
+      height: 100%;
       margin: 0;
-
-      .icon-logo {
-        float: left;
-        padding: 8px;
-        height: 48px;
-        width: 48px;
-        background: @brand-primary;
-        polygon {
-          fill: white;
-        }
-      }
-
-      .brand {
-        color: @brand-primary;
-        height: 48px;
-        margin: 0 48px;
-        padding: 0 @grid-gutter-width / 2;
-        line-height: 48px;
-        font-size: 28px;
-        font-weight: 300;
-        text-align: center;
-        white-space: nowrap;
-        overflow: hidden;
-        text-overflow: ellipsis;
-      }
-
-      .closeBtn {
-        float: right;
-        height: 48px;
-        width: 48px;
-        background: transparent;
-      }
+      border-radius: 0;
     }
 
     .menus {
-      position: absolute;
-      top: 48px;
-      bottom: 130px;
-      width: 100%;
-      overflow-x: hidden;
-      overflow-y: auto;
 
       .divider {
         height: 0;
@@ -143,16 +109,8 @@
       }
     }
 
-    .profile, .auth {
-      background: @brand-primary;
-      position: absolute;
-      width: 100%;
-      height: 130px;
-      bottom: 0;
-      padding: @grid-gutter-width @grid-gutter-width / 2;
-    }
-
     .profile {
+      min-height: 70px;
 
       .avatar {
         height: 70px;
@@ -174,7 +132,6 @@
       }
 
       .info {
-        margin-top: 10px;
         margin-left: 70px + @grid-gutter-width / 2;
         .name {
           font-size: @font-size-large;
