--- a/client/lib/bootstrap-material-design/less/buttons.import.less
+++ b/client/lib/bootstrap-material-design/less/buttons.import.less
@@ -51,10 +51,12 @@
 
 .btn-fab {
   margin: 0;
-  padding: 15px;
-  font-size: 26px;
+  padding: 16px;
+  font-size: 24px;
   width: 56px;
   height: 56px;
+  line-height: 1;
+
   &, &:hover {
     .shadow-z(1);
   }
@@ -64,12 +66,10 @@
   &.btn-fab-mini {
     width: 40px;
     height: 40px;
-    padding: 13px;
-    font-size: 15px;
+    padding: 12px;
+    font-size: 16px;
   }
   i {
-    position: relative;
-    top: -5px;
   }
 }
 
