--- a/client/lib/bootstrap-material-design/less/mixins.import.less
+++ b/client/lib/bootstrap-material-design/less/mixins.import.less
@@ -1,3 +1,9 @@
+// Bootstrap mixins overrides
+@import "mixins/buttons.import.less";
+@import "mixins/alerts.import.less";
+@import "mixins/shadows.import.less";
+@import "mixins/navbars.import.less";
+
 // usage: .variations(~" .check", color, transparent);
 .variations(@extra, @property, @default) {
     // Bootstrap shades
