--- a/client/marketplace/marketplace.less
+++ b/client/marketplace/marketplace.less
@@ -1,4 +1,5 @@
 @import (reference) '../lib/variables.import.less';
+@import (reference) '../lib/mixins.import.less';
 
 .marketplace {
     position: fixed;
@@ -9,52 +10,77 @@
 
     .box {
         display: flex;
-        flex-direction: row;
-        flex-wrap: wrap;
-        justify-content: flex-start;
-        align-items: flex-start;
+        flex-direction: column;
+        flex-wrap: nowrap;
         height: 100%;
         width: 100%;
         overflow: auto;
 
-        .item {
-            padding: @grid-gutter-width / 2;
-            flex-grow: 0;
-            flex-shrink: 0;
-            flex-basis: 200px + @grid-gutter-width;
-
-            .product-card {
-                width: 200px;
-                height: 400px;
-                background-color: #ffffff;
-
-                .image, .info {
-                    height: 200px;
-                    width: 200px;
-                    overflow: hidden;
-                    float: left;
-                }
-
-                .image {
-                    img {
-                        display: block;
-                        height: 100%;
-                        width: 100%;
-                    }
-                }
-
-            }
+        @media (orientation: landscape) {
+            flex-direction: row;
         }
 
-        @media (orientation: landscape) {
-            flex-direction: column;
+        .item {
+            flex-grow: 1;
+            flex-shrink: 0;
+            margin: 15px;
+            background: white;
+            .shadow-z(1);
+            border-radius: 2px;
 
-            .item {
-                .product-card {
-                    width: 400px;
-                    height: 200px;
+            .image {
+                img {
+                    display: block;
+                    height: 100%;
+                    width: 100%;
                 }
             }
+
+          .action {
+            margin: -26px auto 5px;
+            width: 58px;
+          }
+
+          .seller {
+            .clearfix();
+            margin: 15px 0;
+
+            .avatar {
+              height: 40px;
+              width: 40px;
+              border-radius: 100%;
+              .shadow-z(0);
+              overflow: hidden;
+              float: left;
+              margin-right: 5px;
+
+              img {
+                  display: block;
+                  height: 100%;
+                  width: 100%;
+              }
+            }
+
+            .actions {
+             .btn-group {
+              margin: 0;
+               .btn {
+                width: 18px;
+                padding: 0;
+               }
+             }
+            }
+          }
+
+          .info {
+            text-align: center;
+          }
+
+          > .actions {
+           .btn-group {
+            margin: 15px 0 0 0;
+           }
+          }
         }
     }
 }
