--- a/client/sell/button/button.less
+++ b/client/sell/button/button.less
@@ -3,6 +3,6 @@
 #sellButton {
   position: fixed;
   z-index: 100;
-  bottom: @grid-gutter-width;
-  right: @grid-gutter-width;
+  bottom: 20px;
+  right: 20px;
 }
